# factory-balancer

./: Cargo.toml  README.md  factory-balancer-684657f1857abd36.js  factory-balancer-684657f1857abd36_bg.wasm  index.html  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
src/: format.rs  main.rs
