[package]
name = "factor"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "wgpu"] }
egui-file-dialog = "0.12.0"
egui-snarl = { version = "0.9.0", features = ["serde"] }
meval = "0.2.0"
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
wgpu = "27"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
