[package]
name = "factory-balancer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "glow"] }
egui-snarl = { version = "0.9.0", features = ["serde"] }
meval = "0.2.0"
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
web-sys = { version = "0.3.83", features = ["Document", "Storage"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = "symbols"
codegen-units = 1
lto = "fat"
